Remove item records
