# app/v1/routes/itemRouter.js
@@ -1,11 +1,0 @@
-module.exports = (dependences) => {
-  const router = dependences.express.Router();
-  const controller = require("../controllers/itemController")(dependences);
-  router.get("/", controller.getList);
-  router.get("/:id", controller.getSingle);
-  this.get = () => {
-    return router;
-  };
-
-  return this;
-};
